--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--------Main-Start------------>
     <div class="main" id="Home">
         <div class="container">
-            <div class="img"><img src="images/time.jpg " alt=""></div>
+            <div class="img"><img src="images/main.jpg " alt=""></div>
             <div class="text"><h2>Hallo I'm</h2><h2 class="type">sada</h2></div>
         </div>
         <span style="--i:1; left: 5%;"></span>
